# gstreamer-aavddec

./: README.md  meson.build
src/: gstaavddec.c  gstaavddecrypt.c  gstaavddecrypt.h
